# wordle

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  boardmodel.cpp  boardmodel.h  cell.cpp  cell.h  game.h  gamemanager.cpp  gamemanager.h  main.cpp  main.qml  stats.cpp  stats.h  userinteractor.cpp  userinteractor.h
components/: MBoard.qml  MCell.qml  MControls.qml  MDivider.qml  MHeader.qml  MKey.qml  MKeyboard.qml  MPopup.qml  MStats.qml  MWelcome.qml
resources/: stats.json
